# 3Dgraphic

./: .gitignore  2D.cpp  3D.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Constants.h  Locator.cpp  Locator.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  README.md  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureBuilder.cpp  TextureBuilder.h  Vertex.h  common.cpp  common.h  control.cpp  control.h  glad.c  glmTest.cpp  main.cpp  menu.h  settings.h  test.cpp
Control/: Camera.cpp  Camera.h  control.cpp  control.h
GL/: Shader.cpp  Shader.h  Texture.h  TextureGenerator.cpp  TextureGenerator.h
Scene/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Vertex.h
dependencies/: IrrXML.lib  assimp.lib  zlibstatic.lib
dependencies/glad/: glad.c  glad.h
dependencies/glm/gtc/: quaternion.hpp
dependencies/imgui/: imgui_demo.cpp  imgui_impl_opengl3.cpp
menu/: Menu.cpp  Menu.h  settings.h
